# muxr

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Makefile  README.md  agent-shape.toml  demo.tape  deny.toml
docs/: EXTENSION-ARCHITECTURE.md  companion-pane-plan.md  companion-pane.md  readiness-gated-upgrade.md
docs/adr/: 0000-template.md  0001-extension-architecture.md  0001-readiness-gated-upgrade.md  0002-readiness-gated-upgrade.md  0002-reclaim-interrupted-sessions.md  0003-reclaim-interrupted-sessions.md  0004-companion-pane.md  0005-config-discovery-open-regions.md  0006-fail-loud-on-unparseable-session-files.md  0007-interrupt-reclaim-in-core.md  0008-remove-readiness-inference-recycle-sentinel.md  0009-defer-campaign-worklog-rename.md  0010-recycle-flush-muxr-owned.md  0011-fragments-carry-only-identity.md  0012-discovery-trusts-explicit-harness-allowlist.md  README.md
extensions/: README.md
extensions/adapters/: claude.toml  opencode.toml  pi.toml
extensions/examples/: make-durable.sh  readiness.sh  resolver.sh
resources/: skill.md
scripts/: agent-shape-fixture.sh  install-local.sh  lint-reads.sh
specs/: harness-plugins.md  v0.8-harness-aware.md
src/: claude_status.rs  completions.rs  config.rs  extension.rs  harness.rs  init.rs  main.rs  migrate.rs  primitives.rs  remote.rs  session.rs  state.rs  switcher.rs  tmux.rs  tool.rs  ui.rs
