[package]
name = "muxr"
version = "0.2.0"
edition = "2024"
description = "Tmux session manager for AI coding workflows"
repository = "https://gitlab.com/andunn/muxr"
license = "MIT"

[[bin]]
name = "muxr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
dirs = "6"
exec = "0.3"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
