[package]
name = "muxr"
version = "0.6.2"
edition = "2024"
description = "Tmux session manager for AI coding workflows"
repository = "https://gitlab.com/nomograph/muxr"
homepage = "https://gitlab.com/nomograph/muxr"
keywords = ["tmux", "terminal", "multiplexer", "session-manager"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "muxr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
anyhow = "1"
dirs = "6"
exec = "0.3"
shellexpand = "3"
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.20", features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"
