[package]
name = "nomograph-muxr"
version = "3.3.1"
edition = "2024"
description = "Tmux session manager for AI coding workflows"
authors = ["Andrew Dunn <andunn@gitlab.com>"]
repository = "https://gitlab.com/nomograph/muxr"
homepage = "https://gitlab.com/nomograph/muxr"
keywords = ["tmux", "terminal", "multiplexer", "session-manager"]
categories = ["command-line-utilities"]
readme = "README.md"
# Explicit ALLOWLIST (not a blocklist): the package contains ONLY what's listed
# here (plus Cargo.toml/Cargo.lock/README/LICENSE that cargo always adds). This
# is deliberate -- two source files are embedded via `include_str!`
# (extensions/adapters/{claude,pi}.toml in src/config.rs and resources/skill.md
# in src/main.rs); an allowlist guarantees they're in the published tarball, so
# an accidental new exclude/.gitignore rule can never silently ship a crate that
# fails to compile downstream. Keep this in sync if a new `include_str!` lands.
include = [
    "src/**/*.rs",
    "resources/skill.md",
    "extensions/adapters/*.toml",
    "extensions/README.md",
    "README.md",
    "CHANGELOG.md",
    "ARCHITECTURE.md",
    "LICENSE",
]
license = "MIT"

[[bin]]
name = "muxr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
serde_json = "1"
serde_yaml_ng = "0.10"
anyhow = "1"
dirs = "6"
exec = "0.3"
shellexpand = "3"
ratatui = "0.29"
crossterm = "0.29"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"
